[tool.poetry]
name = "gha-board"
version = "0.1.0"
description = ""
authors = ["collinmurd <collinmurdock22@gmail.com>"]
readme = "README.md"
packages = [{include = "gha_board"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
textual = {extras = ["dev"], version = "^0.20.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
